--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,37 +1,46 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="container">
+  <div class="btn-container">
+    <button mat-raised-button id="btn-add">
+      <mat-icon fontSet="material-icons">add</mat-icon>
+    </button>
+  </div>
 
-  <ng-container matColumnDef="nome">
-    <th mat-header-cell *matHeaderCellDef> Nome </th>
-    <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-  </ng-container>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef> E-mail </th>
-    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-  </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>E-mail</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="dataNascimento">
-    <th mat-header-cell *matHeaderCellDef> Data de nascimento </th>
-    <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
-  </ng-container>
+    <ng-container matColumnDef="dataNascimento">
+      <th mat-header-cell *matHeaderCellDef>Data de nascimento</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.dataNascimento | date : "dd/MM/yyyy" }}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="sexo">
-    <th mat-header-cell *matHeaderCellDef> Sexo </th>
-    <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
-  </ng-container>
+    <ng-container matColumnDef="sexo">
+      <th mat-header-cell *matHeaderCellDef>Sexo</th>
+      <td mat-cell *matCellDef="let element">{{ element.sexo }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Opções </th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="primary" (click)="editRecord(element)">
-        <mat-icon fontSet="material-icons">edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" (click)="deleteRecord(element)">
-        <mat-icon fontSet="material-icons">delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Opções</th>
+      <td mat-cell *matCellDef="let element" class="action-cell">
+        <span class="icon-button" (click)="editRecord(element)">
+          <mat-icon>edit</mat-icon>
+        </span>
+        <span class="icon-button" (click)="deleteRecord(element)">
+          <mat-icon>delete</mat-icon>
+        </span>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let element; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+  </table>
+</div>
