--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,21 +1,58 @@
+.container {
+  display: flex;
+  min-width: 400px; 
+  
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+}
+
+.btn-container {
+  align-self: flex-end;
+}
+
+#btn-add {
+  background-color: var(--medium-blue);
+  color: var(--light-text);
+  border-radius: 5px; 
+  padding: 0px 4px; 
+  border: none;
+  margin-bottom: 0.5rem;
+  align-items: center;
+}
+
+#btn-add:hover {
+  background-color: var(--dark-blue); 
+}
+
 .mat-table {
-  margin: 20px auto; 
-  width: calc(100% - 40px); 
+  width: 100%; 
   border-collapse: separate;
   border-spacing: 0;
-  border-radius: 8px; 
+  border-radius: 5px; 
   overflow: hidden; 
-  border: 1px solid #ccc; 
+  border: 1px solid var(--light-grey); 
+}
+
+th, td {
+  color: var(--dark-gray);
 }
 
 .mat-header-cell, .mat-cell {
-  padding: 12px;
+  padding: 5px;
   text-align: left;
   border-bottom: 1px solid #ccc; 
 }
 
 .mat-cell {
   border-bottom: none;
+}
+
+.action-cell {
+  display: flex;
+  justify-content: center;
 }
 
 .mat-row:nth-child(even) {
@@ -26,9 +63,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.mat-icon-button {
-  margin: 0 4px;
-  padding: 8px; 
 }
