--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,8 +8,11 @@ header {
 }
 
 header .logo-container {
-  background-color: #a97efb;
-  background-image: linear-gradient(68deg, #a97efb 0%, #a9f5ff 100%);
+  // background-color: #a97efb;
+  // background-image: linear-gradient(68deg, #a97efb 0%, #a9f5ff 100%);
+
+  background-color: #2196f3;
+  background-image: linear-gradient(249deg, #2196f3 0%, #071136 100%);
 
   padding: 10px;
   width: 100%;
@@ -17,6 +20,7 @@ header .logo-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 header .logo-container img {
