--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="btn-container">
-    <button mat-raised-button id="btn-add">
+    <button mat-raised-button id="btn-add" (click)="openDialog()">
       <mat-icon fontSet="material-icons">add</mat-icon>
     </button>
   </div>
