--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,9 @@
+<header>
+  <div class="logo-container">
+    <img src="/assets/images/svg/logo.svg" />
+  </div>
+</header>
+
 <div class="container">
   <div class="btn-container">
     <button mat-raised-button id="btn-add" (click)="openDialog()">
