--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -50,11 +50,25 @@ header .logo-container img {
   padding: 0px 4px;
   border: none;
   margin-bottom: 0.5rem;
-  align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 #btn-add:hover {
   background-color: var(--dark-blue);
+}
+
+.mat-cell .mat-icon[data-action="edit"]:hover {
+  color: var(--dark-blue);
+}
+
+.mat-cell .mat-icon {
+  color: var(--light-grey);
+}
+
+.mat-cell .mat-icon[data-action="delete"]:hover {
+  color: var(--red);
 }
 
 .mat-table {
@@ -64,6 +78,7 @@ header .logo-container img {
   border-radius: 5px;
   overflow: hidden;
   border: 1px solid var(--light-grey);
+  background-color: var(--white);
 }
 
 th,
@@ -75,7 +90,7 @@ td {
 .mat-cell {
   padding: 5px;
   text-align: left;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--light-grey);
 }
 
 .mat-cell {
@@ -88,7 +103,7 @@ td {
 }
 
 .mat-row:nth-child(even) {
-  background-color: #fafafa;
+  background-color: var(--light-background);
 }
 
 .mat-cell.actions {
