--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 :root {
+  --white: #ffffff;
   --dark-grey: #212529;
-  --light-grey: #ced4da;
+  --light-grey: hsl(210, 14%, 83%);
   --light-text: #fff;
   --medium-blue: #2196f3;
   --dark-blue: #0c7cd5;
+  --red: #d76e6e;
+  --light-background: #fafafa;
 }
 
 * {
@@ -16,6 +19,7 @@
 body {
   height: 100%;
   width: 100%;
+  background-color: var(--light-background);
 }
 
 @font-face {
