feat: angular/material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,6 @@ body {
   font-weight: 900;
   font-style: normal;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
