feat: font gilroy

--- a/src/app/components/dialog-registration/dialog-registration.component.html
+++ b/src/app/components/dialog-registration/dialog-registration.component.html
@@ -10,8 +10,8 @@
     <mat-form-field>
       <mat-label>Gênero</mat-label>
       <mat-select formControlName="sexo">
-        <mat-option value="Masculino">Masculino</mat-option>
-        <mat-option value="Feminino">Feminino</mat-option>
+        <mat-option value="M">Masculino</mat-option>
+        <mat-option value="F">Feminino</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field>
