--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="btn-container">
     <button mat-raised-button id="btn-add" (click)="openDialog()">
-      <mat-icon fontSet="material-icons">add</mat-icon>
+      Novo aluno
     </button>
   </div>
 
@@ -37,12 +37,14 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Opções</th>
       <td mat-cell *matCellDef="let element" class="action-cell">
-        <span (click)="editRecord(element)">
-          <mat-icon data-action="edit">edit</mat-icon>
-        </span>
-        <span (click)="deleteRecord(element)">
-          <mat-icon data-action="delete">delete</mat-icon>
-        </span>
+        <div class="action-icons">
+          <span (click)="editRecord(element)">
+            <mat-icon data-action="edit">edit</mat-icon>
+          </span>
+          <span (click)="deleteRecord(element)">
+            <mat-icon data-action="delete">delete</mat-icon>
+          </span>
+        </div>
       </td>
     </ng-container>
 
