--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -21,7 +21,7 @@ header .logo-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 header .logo-container img {
@@ -46,10 +46,10 @@ header .logo-container img {
 #btn-add {
   background-color: var(--medium-blue);
   color: var(--light-text);
-  border-radius: 5px;
-  padding: 0px 4px;
+  border-radius: 15px;
+  padding: 8px 16px;
   border: none;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -75,10 +75,11 @@ header .logo-container img {
   width: 100%;
   border-collapse: separate;
   border-spacing: 0;
-  border-radius: 5px;
+  border-radius: 20px;
   overflow: hidden;
   border: 1px solid var(--light-grey);
   background-color: var(--white);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 th,
@@ -86,8 +87,13 @@ td {
   color: var(--dark-gray);
 }
 
+.mat-header-cell {
+  background-color: rgb(245, 249, 249);
+}
+
 .mat-header-cell,
 .mat-cell {
+  font-size: 14px;
   padding: 5px;
   text-align: left;
   border-bottom: 1px solid var(--light-grey);
