--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,45 +10,22 @@
 }
 
 * {
-  font-family: "Gotham";
+  font-family: "Gilroy";
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("assets/fonts/gilroy/Gilroy-SemiBold.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
 }
 
 body {
   height: 100%;
   width: 100%;
   background-color: var(--light-background);
+  font-family: "Gilroy";
 }
-
-@font-face {
-  font-family: "Gotham";
-  src: url("assets/fonts/Gotham/gotham-light.woff2") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("assets/fonts/Gotham/gotham-book.woff2") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("assets/fonts/Gotham/gotham-bold.woff2") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("assets/fonts/Gotham/gotham-black.woff2") format("truetype");
-  font-weight: 900;
-  font-style: normal;
-}
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
