--- a/src/app/components/dialog-registration/dialog-registration.component.html
+++ b/src/app/components/dialog-registration/dialog-registration.component.html
@@ -1,12 +1,24 @@
 <mat-dialog-content>
   <h2 mat-dialog-title>Editar Registro</h2>
-  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="registrationForm">
     <mat-form-field>
       <input matInput placeholder="Nome" formControlName="nome" />
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Email" formControlName="email" />
     </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Date of birth</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        formControlName="dataNascimento"
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
     <mat-form-field>
       <mat-label>Gênero</mat-label>
       <mat-select formControlName="sexo">
@@ -14,16 +26,10 @@
         <mat-option value="F">Feminino</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field>
-      <input
-        matInput
-        placeholder="Data de Nascimento"
-        formControlName="dataNascimento"
-      />
-    </mat-form-field>
+
     <div mat-dialog-actions align="end">
       <button mat-button (click)="onNoClick()">Cancelar</button>
-      <button mat-button color="primary" type="submit">Salvar</button>
+      <button mat-button (click)="onSubmit()">Salvar</button>
     </div>
   </form>
 </mat-dialog-content>
