--- a/src/app/components/dialog-registration/dialog-registration.component.html
+++ b/src/app/components/dialog-registration/dialog-registration.component.html
@@ -28,7 +28,7 @@
     </mat-form-field>
 
     <div mat-dialog-actions align="end">
-      <button mat-button (click)="onNoClick()">Cancelar</button>
+      <button mat-button (click)="onCancelClick()">Cancelar</button>
       <button mat-button (click)="onSubmit()">Salvar</button>
     </div>
   </form>
