--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 :root {
   --white: #ffffff;
   --dark-grey: #212529;
-  --light-grey: hsl(210, 14%, 83%);
+  --light-grey: #ced4da;
   --light-text: #fff;
   --medium-blue: #2196f3;
   --dark-blue: #0c7cd5;
