--- a/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
+++ b/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
@@ -1,6 +1,5 @@
 h2[mat-dialog-title] {
   color: var(--dark-grey);
-  font-size: 24px;
   text-align: center;
   margin: 20px 0;
 }
@@ -12,13 +11,17 @@ div[mat-dialog-content] {
 
 div[mat-dialog-actions] {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+
   margin-top: 30px;
 }
 
 button[mat-button] {
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 12px 24px;
+  border-radius: 25px;
+  margin: 0 10px;
+  font-weight: bold;
+  border: none;
 }
 
 button[mat-button] {
