--- a/src/app/components/dialog-registration/dialog-registration.component.scss
+++ b/src/app/components/dialog-registration/dialog-registration.component.scss
@@ -1,3 +1,38 @@
 .mat-dialog-content {
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 60vh;
+}
+
+.mat-form-field {
+  width: 100%;
+  max-width: 50rem;
+}
+
+.mat-dialog-actions {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+#btn-save,
+#btn-cancel {
+  margin: 0 20px;
+  background-color: var(--medium-blue);
+  color: var(--light-text);
+  border-radius: 25px;
+  padding: 12px 24px;
+  border: none;
+  margin-bottom: 1rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
+
+#btn-save:hover,
+#btn-cancel:hover {
+  background-color: var(--dark-blue);
 }
