--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,9 +10,10 @@ header {
 header .logo-container {
   background-color: var(--medium-blue);
   background-image: linear-gradient(
-    249deg,
-    var(--medium-blue) 0%,
-    #071136 100%
+    75deg,
+    #5c31d7 14%,
+    #0f8ce9 62%,
+    #42aad9 100%
   );
 
   padding: 10px;
@@ -44,15 +45,20 @@ header .logo-container img {
 }
 
 #btn-add {
-  background-color: var(--medium-blue);
-  color: var(--light-text);
-  border-radius: 15px;
-  padding: 8px 16px;
-  border: none;
-  margin-bottom: 1rem;
-  text-align: center;
   display: flex;
   justify-content: center;
+
+  padding: 12px 24px;
+  border-radius: 25px;
+  border: none;
+  margin-bottom: 1rem;
+
+  text-align: center;
+  font-size: 28;
+  width: 120px;
+
+  color: var(--light-text);
+  background-color: var(--medium-blue);
 }
 
 #btn-add:hover {
