--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
     <ng-container matColumnDef="dataNascimento">
       <th mat-header-cell *matHeaderCellDef>Data de nascimento</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.dataNascimento | date : "dd/MM/yyyy" }}
+        {{ element.dataNascimento }}
       </td>
     </ng-container>
 
