--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,17 @@
 :root {
+  --red: #d76e6e;
   --white: #ffffff;
+  --purple: #5c31d7;
+  --light-blue: #42aad9;
+  --light-background: #fafafa;
+
+  //Guia de estilos
+
   --dark-grey: #212529;
-  --light-grey: #ced4da;
   --light-text: #fff;
   --medium-blue: #2196f3;
   --dark-blue: #0c7cd5;
-  --red: #d76e6e;
-  --light-background: #fafafa;
+  --light-grey: #ced4da;
 }
 
 * {
