--- a/src/app/components/dialog-registration/dialog-registration.component.html
+++ b/src/app/components/dialog-registration/dialog-registration.component.html
@@ -1,15 +1,16 @@
 <mat-dialog-content>
-  <h2 mat-dialog-title>Editar Registro</h2>
   <form [formGroup]="registrationForm">
     <mat-form-field appearance="outline">
+      <mat-label>Nome</mat-label>
       <input matInput placeholder="Nome" formControlName="nome" />
     </mat-form-field>
     <mat-form-field appearance="outline">
+      <mat-label>Data de nascimento</mat-label>
       <input matInput placeholder="Email" formControlName="email" />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Date of birth</mat-label>
+      <mat-label>E-mail</mat-label>
       <input
         matInput
         placeholder="DD/MM/YYYY"
