--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,32 +1,31 @@
 header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   width: 100%;
   gap: 12px;
 }
 
+header .logo-container img {
+  height: 50px;
+}
+
 header .logo-container {
-  background-color: var(--medium-blue);
-  background-image: linear-gradient(
-    75deg,
-    #5c31d7 14%,
-    #0f8ce9 62%,
-    #42aad9 100%
-  );
-
-  padding: 10px;
-  width: 100%;
-
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
+  padding: 10px;
+  width: 100%;
 
-header .logo-container img {
-  height: 50px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  background-color: var(--medium-blue);
+  background-image: linear-gradient(
+    75deg,
+    var(--purple) 14%,
+    var(--dark-blue) 62%,
+    var(--light-blue) 100%
+  );
 }
 
 .toolbar-container {
@@ -88,7 +87,7 @@ header .logo-container img {
 }
 
 .mat-cell .mat-icon {
-  color: var(--light-grey);
+  color: var(--light-blue);
 }
 
 .mat-cell .mat-icon[data-action="delete"]:hover {
@@ -134,10 +133,4 @@ td {
 
 .mat-row:nth-child(even) {
   background-color: var(--light-background);
-}
-
-.mat-cell.actions {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
