--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <th mat-header-cell class="header-column" *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
     </ng-container>
 
@@ -45,7 +45,9 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Opções</th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: center">
+        Opções
+      </th>
       <td mat-cell *matCellDef="let element" class="action-cell">
         <div class="action-icons">
           <span (click)="editRecord(element)">
