--- a/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
+++ b/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
@@ -1,36 +1,31 @@
 h2[mat-dialog-title] {
-  color: var(--dark-grey);
   text-align: center;
-  margin: 20px 0;
+  font-size: 1.3rem;
+  margin-bottom: 20px;
+
+  color: var(--dark-grey);
 }
 
 div[mat-dialog-content] {
   text-align: center;
-  margin: 20px 0;
 }
 
 div[mat-dialog-actions] {
   display: flex;
   justify-content: center;
-
-  margin-top: 30px;
 }
 
 button[mat-button] {
-  padding: 12px 24px;
-  border-radius: 25px;
+  padding: 10px 20px;
   margin: 0 10px;
-  font-weight: bold;
-  border: none;
-}
 
-button[mat-button] {
-  background-color: var(--medium-blue);
-  color: #fff;
+  border-radius: 20px;
   border: none;
+
+  background-color: var(--medium-blue);
+  color: var(--light-text);
 }
 
 button[mat-button]:hover {
   background-color: var(--dark-blue);
-  color: var(--light-text);
 }
