--- a/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
+++ b/src/app/components/dialog-confirmation/dialog-confirmation.component.scss
@@ -3,7 +3,7 @@ h2[mat-dialog-title] {
   font-size: 1.3rem;
   margin-bottom: 20px;
 
-  color: var(--dark-grey);
+  color: var(--dark-gray);
 }
 
 div[mat-dialog-content] {
@@ -12,7 +12,7 @@ div[mat-dialog-content] {
 
 div[mat-dialog-actions] {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 button[mat-button] {
@@ -27,5 +27,6 @@ button[mat-button] {
 }
 
 button[mat-button]:hover {
+  border-color: none;
   background-color: var(--dark-blue);
 }
