--- a/src/app/components/dialog-registration/dialog-registration.component.html
+++ b/src/app/components/dialog-registration/dialog-registration.component.html
@@ -1,36 +1,65 @@
-<mat-dialog-content>
-  <form [formGroup]="registrationForm">
-    <mat-form-field appearance="outline">
-      <mat-label>Nome</mat-label>
-      <input matInput placeholder="Nome" formControlName="nome" />
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>E-mail</mat-label>
-      <input matInput placeholder="Email" formControlName="email" />
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-      <mat-label>Data de nascimento</mat-label>
+<mat-dialog-content class="custom-dialog-content">
+  <form
+    [formGroup]="registrationForm"
+    class="custom-form"
+    (ngSubmit)="onSubmit()"
+  >
+    <div class="custom-form-group">
+      <label for="nome">Nome:</label>
       <input
-        matInput
+        type="text"
+        id="nome"
+        name="nome"
+        formControlName="nome"
+        required
+      />
+    </div>
+    <div class="custom-form-group">
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        formControlName="email"
+        required
+      />
+    </div>
+    <div class="custom-form-group">
+      <label for="dataNascimento">Data de Nascimento:</label>
+      <input
+        type="text"
+        id="dataNascimento"
+        name="dataNascimento"
         placeholder="DD/MM/YYYY"
         formControlName="dataNascimento"
+        required
       />
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-      <mat-label>Gênero</mat-label>
-      <mat-select formControlName="sexo">
-        <mat-option value="M">Masculino</mat-option>
-        <mat-option value="F">Feminino</mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <div mat-dialog-actions>
-      <button id="btn-cancel" mat-button (click)="onCancelClick()">
+    </div>
+    <div class="custom-form-group">
+      <label for="sexo">Gênero:</label>
+      <select id="sexo" name="sexo" formControlName="sexo" required>
+        <option value="" disabled selected>Selecione</option>
+        <option value="M">Masculino</option>
+        <option value="F">Feminino</option>
+      </select>
+    </div>
+    <div class="custom-form-actions">
+      <button
+        type="button"
+        id="btn-cancel"
+        mat-button
+        (click)="onCancelClick()"
+      >
         Cancelar
       </button>
-      <button id="btn-save" mat-button (click)="onSubmit()">Salvar</button>
+      <button
+        type="submit"
+        id="btn-save"
+        mat-button
+        [disabled]="!registrationForm.valid"
+      >
+        Salvar
+      </button>
     </div>
   </form>
 </mat-dialog-content>
