--- a/src/app/components/dialog-registration/dialog-registration.component.scss
+++ b/src/app/components/dialog-registration/dialog-registration.component.scss
@@ -1,43 +1,72 @@
-.mat-dialog-content {
-  overflow: hidden;
+.custom-dialog-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
   max-width: 60vh;
-
-  color: var(--dark-grey);
+  color: var(--dark-gray);
 }
 
-.mat-form-field {
+.custom-form-group {
+  margin-bottom: 20px;
+}
+
+.custom-form-group label {
+  font-weight: bold;
+}
+
+.custom-form-group input,
+.custom-form-group select {
   width: 100%;
-  max-width: 50rem;
-  color: var(--dark-grey);
-  border-color: var(--red);
+  padding: 10px;
+  border: 1px solid var(--light-gray);
+  border-radius: 4px;
+  margin-top: 5px;
+  transition: border-color 0.3s;
 }
 
-.mat-dialog-actions {
-  display: flex;
-  justify-content: space-around;
+.custom-form-group input:focus,
+.custom-form-group select:focus {
+  opacity: 1;
+  box-shadow: 0 0 0 2px var(--light-gray);
+  outline: none;
 }
 
-#btn-save,
-#btn-cancel {
+.custom-form-actions {
+  margin-top: 20px;
   display: flex;
-  justify-content: center;
-  text-align: center;
+  justify-content: space-between;
+}
 
-  border: none;
-  border-radius: 20px;
-
+.custom-form-actions button {
   padding: 10px 20px;
-  margin-bottom: 1rem;
-  width: 120px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
+#btn-cancel,
+#btn-save {
   background-color: var(--medium-blue);
   color: var(--light-text);
+  padding: 10px 20px;
+  width: 100px;
+  border-radius: 20px;
+  border: none;
 }
 
-#btn-save:hover,
-#btn-cancel:hover {
+#btn-cancel:hover,
+#btn-save:hover {
   background-color: var(--dark-blue);
+}
+
+#btn-cancel:focus,
+#btn-save:focus {
+  border-color: var(--purple);
+  outline: none;
+  box-shadow: 0 0 0 2px var(--light-gray);
+}
+
+#btn-cancel {
+  background-color: var(--gray);
 }
