--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -41,13 +41,13 @@ header .logo-container {
   border-radius: 25px;
   margin-right: 10px;
   width: 340px;
-  border: 1px solid var(--light-grey);
+  border: 1px solid var(--light-gray);
 }
 
 .search-container input[type="text"]:focus {
   outline: none;
-  border-color: var(--light-grey);
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.1);
+  border-color: var(--light-gray);
+  box-shadow: 0 0 0 0.1rem rgba(115, 152, 192, 0.1);
 }
 
 .container {
@@ -97,7 +97,7 @@ header .logo-container {
   border-spacing: 0;
   border-radius: 20px;
   overflow: hidden;
-  border: 1px solid var(--light-grey);
+  border: 1px solid var(--light-gray);
   background-color: var(--white);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -110,7 +110,7 @@ td {
 .mat-header-cell,
 .mat-cell {
   font-size: 14px;
-  border-bottom: 1px solid var(--light-grey);
+  border-bottom: 1px solid var(--light-gray);
 }
 
 .mat-header-cell {
