--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,17 @@
   --red: #d76e6e;
   --white: #ffffff;
   --purple: #5c31d7;
+  --gray: gray;
   --light-blue: #42aad9;
   --light-background: #fafafa;
 
   //Guia de estilos
 
-  --dark-grey: #212529;
+  --dark-gray: #212529;
   --light-text: #fff;
   --medium-blue: #2196f3;
   --dark-blue: #0c7cd5;
-  --light-grey: #ced4da;
+  --light-gray: #ced4da;
 }
 
 * {
